# Simple-Networking

./: .gitignore  CMakeLists.txt  README.md
headers/: base_headers.hpp  networking_headers.hpp
objects/: network_tests  string_tests
prototypes/: networking_functions  string_functions
source/: networking_functions.c++  string_functions.c++
tests/: network_tests.c++  string_tests.c++
